<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".SimpleScanActivity">

    <EditText
        android:id="@+id/text_for_qr2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_create"
        android:textSize="23sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnGenerate2"/>

    <Button
        android:id="@+id/btnGenerate2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/create"
        app:layout_constraintTop_toBottomOf="@+id/text_for_qr2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/codeEAN13_2"/>

    <Button
        android:id="@+id/codeEAN13_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/qr_detector"
        app:layout_constraintTop_toBottomOf="@+id/btnGenerate2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:id="@+id/QRimage2"
        android:layout_width="0dp"
        android:layout_height="400dp"
        app:layout_constraintTop_toBottomOf="@+id/btnGenerate2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>